feat: layer wise gen
